fix: FormDropdown 리스트 overflow 수정

--- a/src/components/commons/inputs/FormDropdown.module.scss
+++ b/src/components/commons/inputs/FormDropdown.module.scss
@@ -102,7 +102,7 @@
         @include thin-scrollbar;
 
         overflow-y: auto;
-        max-height: 24.8rem;
+        max-height: 23rem;
         padding-right: 0.4rem;
 
         &-btn {
